debugging part-asm overlap

--- a/jup.ipynb
+++ b/jup.ipynb
@@ -175,6 +175,59 @@
     "\n",
     "total\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = False\n",
+    "if a:\n",
+    "    b = 11\n",
+    "else:\n",
+    "    b = 2\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def findByName(string, full=False):\n",
+    "    '''Search part tree for all unique nodes'''\n",
+    "    if full:\n",
+    "        partList = True\n",
+    "        return partList\n",
+    "    else:\n",
+    "        partList = False\n",
+    "        return partList\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(findByName('string', full=True))"
+   ]
   }
  ],
  "metadata": {
