--- a/jup.ipynb
+++ b/jup.ipynb
@@ -228,6 +228,33 @@
     "\n",
     "print(findByName('string', full=True))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Sub', 4, 5]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rows = [1,2,'Sub',4,5]\n",
+    "rIndex = 0\n",
+    "for row in rows:\n",
+    "    rIndex += 1\n",
+    "    if row == 'Sub':\n",
+    "        break\n",
+    "rows = rows[rIndex-1:]\n",
+    "rows"
+   ]
   }
  ],
  "metadata": {
