--- a/jup.ipynb
+++ b/jup.ipynb
@@ -307,10 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "if None:\n",
+    "    print('true')\n",
+    "else:\n",
+    "    print('False')"
+   ]
   }
  ],
  "metadata": {
